2000-11-01  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* mkoctfile.in: Handle --print.

2000-10-31  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* aclocal.m4 (OCTAVE_PROG_GPERF): Check that gperf supports flags
	we use.

	* missing: New file, modified from the missing script provided by
	automake (never create files, just exit with failure status).
	* aclocal.m4 (OCTAVE_PROG_BISON, OCTAVE_PROG_FLEX, OCTAVE_PROG_GPERF): 
	Use $(top_srcdir)/missing as replacement script.

	* aclocal.m4 (OCTAVE_PROG_FLEX, OCTAVE_PROG_BISON): New macros.
	* configure.in: Use them.

2000-10-27  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* autogen.sh: Don't run configure.

	* configure.in (SPECIAL_MATH_LIB): Delete code related to this var.
	* Makeconf.in: Ditto.
	(BLAS_LIBS, LIBS): Substitute here.
	(do-subst-config-vals): Put BLAS_LIBS in oct-conf.h.

2000-07-20  Joao Cardoso  <jcardoso@inescn.pt>

	* configure.in: (LD_CXX): Define and substitute.
	For sco3.2v5 systems, set SONAME_FLAGS and RLD_FLAG.
	* Makeconf.in (LD_CXX): Allow substitution.

2000-07-18  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* octMakefile.in (DISTSUBDIRS): Define in terms of $(ALL_SUBDIRS).

2000-07-17  Joao Cardoso  <jcardoso@inescn.pt>

	* configure.in (LIBGLOB): Set to be the two object files in the
	glob directory instead of libglob.a.

2000-07-05  Steven G. Johnson  <stevenj@gil-galad.mit.edu>

	* Use BLAS_LIBS to save the names of BLAS libraries instead of
	adding them to LIBS, then substitute BLAS_LIBS.

2000-06-30  Steven G. Johnson  <stevenj@gil-galad.mit.edu>

	* configure.in: Support for --with-fastblas (ATLAS).

2000-06-29  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Check for long long data type.

2000-06-29  Steven G. Johnson  <stevenj@gil-galad.mit.edu>

	* acconfig.h (HAVE_HDF5): Add undef.
	* configure.in: Handle --with-hdf5.

2000-06-26  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* octave-bug.in: Substitute correct values for config_opts,
	MACHINE, and CXXFLAGS.
