@@ -1,3 +1,7 @@
+2000-11-03  Andy Adler  <en254@freenet.carleton.ca>
+
+	* mkoctfile.in: Handle -c to mean compile only.
+
 2000-11-01  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
 	* mkoctfile.in: Handle --print.
